unpackaged/main/default/objects/Recurring_Billing_Master__c/Recurring_Billing_Master__c.object-meta.xml
<CustomObject>
    <label>Recurring Billing Master</label>
    <nameField>
        <displayFormat>RBM-{000000}</displayFormat>
        <label>Recurring Billing Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Billing Master</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>