unpackaged/main/default/objects/Recurring_Billing_Master__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recurring Billing Master</relationshipLabel>
    <relationshipName>Recurring_Billing_Master</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>