unpackaged/main/default/objects/Recurring_Billing_Master__c/fields/Independent_Partner__c.field-meta.xml
<CustomField>
    <fullName>Independent_Partner__c</fullName>
    <label>Independent Partner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Canoa Systems, Inc.</fullName>
            </value>
            <value>
                <fullName>FCS Communications, Inc.</fullName>
            </value>
            <value>
                <fullName>TechSys Consulting</fullName>
            </value>
            <value>
                <fullName>Scott Enriquez</fullName>
            </value>
            <value>
                <fullName>Jeff Hicks Computer Consulting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>