unpackaged/main/default/objects/Recurring_Billing_Master__c/fields/IP_Eligible_Revenue__c.field-meta.xml
<CustomField>
    <fullName>IP_Eligible_Revenue__c</fullName>
    <label>IP Eligible Revenue</label>
    <summarizedField>Recurring_Billing_Line_Items__c.Total_Monthly_Charge__c</summarizedField>
    <summaryFilterItems>
        <field>Recurring_Billing_Line_Items__c.IP_Eligible_Revenue__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Recurring_Billing_Line_Items__c.Recurring_Billing_Master__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>