unpackaged/main/default/objects/Recurring_Billing_Master__c/fields/Recurring_Billing_Is_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Billing_Is_Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recurring Billing Is Inactive</label>
    <type>Checkbox</type>
</CustomField>