unpackaged/main/default/objects/Recurring_Billing_Master__c/fields/Report_Header_1__c.field-meta.xml
<CustomField>
    <fullName>Report_Header_1__c</fullName>
    <formula>Account_Name__c+" - "+ Account_Alias__c+" - "+ Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ID</label>
    <type>Text</type>
</CustomField>