unpackaged/main/default/objects/Recurring_Billing_Master__c/fields/Total_Funded_Monthly_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_Funded_Monthly_Charge__c</fullName>
    <label>Total Funded Monthly Charge</label>
    <summarizedField>Recurring_Billing_Line_Items__c.Total_Monthly_Charge__c</summarizedField>
    <summaryFilterItems>
        <field>Recurring_Billing_Line_Items__c.CCE_Funding_Status__c</field>
        <operation>equals</operation>
        <value>Funded</value>
    </summaryFilterItems>
    <summaryForeignKey>Recurring_Billing_Line_Items__c.Recurring_Billing_Master__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>